--- a/generator/templates/generator/home.html
+++ b/generator/templates/generator/home.html
@@ -1,3 +1,8 @@
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" 
+    rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1"
+	 crossorigin="anonymous">
+	 
+
 <div class="form-style-8">
     <h2>PAssword Generator</h2>
     <form action = "password" >
@@ -25,7 +30,7 @@
 	<input type="submit" value="Generate Password">
 	</form>
 
-	<a href = "{% url 'about' %}" value="About This Page" style="text-decoration: none;color: black;">About This Page</a>
+	<a href = "{% url 'about' %}" value="About This Page" style="text-decoration:none; color: white;" class="btn btn-success" > About This Page</a>
 	
   </div>
 
